[package]
name = "libra2-config"
description = "Libra2 config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-crypto = { workspace = true }
libra2-global-constants = { workspace = true }
libra2-logger = { workspace = true }
libra2-secure-storage = { workspace = true }
aptos-short-hex-str = { workspace = true }
libra2-temppath = { workspace = true }
libra2-transaction-filters = { workspace = true }
libra2-types = { workspace = true }
arr_macro = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
cfg-if = { workspace = true }
get_if_addrs = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
poem-openapi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
libra2-crypto = { workspace = true }
libra2-types = { workspace = true, features = ["fuzzing"] }
tempfile = { workspace = true }

[features]
default = []
failpoints = []
fuzzing = ["libra2-crypto/fuzzing", "libra2-types/fuzzing"]
smoke-test = []
testing = []
tokio-console = []

[package.metadata.cargo-machete]
ignored = ["strum"]
