[package]
name = "libra2-consensus"
description = "Libra2 consensus"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-bitvec = { workspace = true }
libra2-bounded-executor = { workspace = true }
libra2-channels = { workspace = true }
libra2-collections = { workspace = true }
libra2-config = { workspace = true }
libra2-consensus-notifications = { workspace = true }
libra2-consensus-types = { workspace = true }
libra2-crypto = { workspace = true }
libra2-crypto-derive = { workspace = true }
libra2-dkg = { workspace = true }
libra2-enum-conversion-derive = { workspace = true }
libra2-event-notifications = { workspace = true }
libra2-executor = { workspace = true }
libra2-executor-types = { workspace = true }
libra2-experimental-runtimes = { workspace = true }
libra2-fallible = { workspace = true }
libra2-infallible = { workspace = true }
libra2-logger = { workspace = true }
libra2-mempool = { workspace = true }
libra2-metrics-core = { workspace = true }
libra2-network = { workspace = true }
libra2-peer-monitoring-service-types = { workspace = true }
libra2-reliable-broadcast = { workspace = true }
libra2-runtimes = { workspace = true }
libra2-safety-rules = { workspace = true }
libra2-schemadb = { workspace = true }
libra2-secure-storage = { workspace = true }
libra2-short-hex-str = { workspace = true }
libra2-storage-interface = { workspace = true }
libra2-temppath = { workspace = true }
libra2-time-service = { workspace = true }
libra2-transaction-filters = { workspace = true }
libra2-types = { workspace = true }
libra2-validator-transaction-pool = { workspace = true }
aptos-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
claims = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
enum_dispatch = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }
move-core-types = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
aptos-cached-packages = { workspace = true }
libra2-config = { workspace = true, features = ["fuzzing"] }
libra2-consensus-types = { workspace = true, features = ["fuzzing"] }
libra2-executor-test-helpers = { workspace = true }
libra2-keygen = { workspace = true }
libra2-mempool = { workspace = true, features = ["fuzzing"] }
libra2-netcore = { workspace = true }
libra2-network = { workspace = true, features = ["fuzzing"] }
libra2-safety-rules = { workspace = true, features = ["testing"] }
libra2-transaction-filters = { workspace = true, features = ["fuzzing"] }
libra2-types = { workspace = true, features = ["testing"] }
aptos-vm = { workspace = true, features = ["fuzzing"] }
libra2-vm-validator = { workspace = true }
claims = { workspace = true }
mockall = { workspace = true }
move-core-types = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
fuzzing = [
    "libra2-consensus-types/fuzzing",
    "libra2-config/fuzzing",
    "libra2-crypto/fuzzing",
    "libra2-mempool/fuzzing",
    "libra2-types/fuzzing",
    "libra2-safety-rules/testing",
]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[lints.clippy]
unwrap_used = "deny"
