[package]
name = "aptos-dkg-runtime"
description = "Aptos DKG runtime"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-bounded-executor = { workspace = true }
libra2-channels = { workspace = true }
libra2-config = { workspace = true }
libra2-consensus-types = { workspace = true }
libra2-crypto = { workspace = true }
libra2-crypto-derive = { workspace = true }
libra2-enum-conversion-derive = { workspace = true }
libra2-event-notifications = { workspace = true }
libra2-infallible = { workspace = true }
libra2-logger = { workspace = true }
libra2-metrics-core = { workspace = true }
libra2-network = { workspace = true }
aptos-reliable-broadcast = { workspace = true }
libra2-runtimes = { workspace = true }
libra2-safety-rules = { workspace = true }
libra2-time-service = { workspace = true }
libra2-types = { workspace = true }
aptos-validator-transaction-pool = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }

[dev-dependencies]
libra2-types = { workspace = true, features = ["testing"] }

[features]
smoke-test = []
