[package]
name = "libra2-node"
description = "Libra2 node"
version = "0.0.0-main"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-admin-service = { workspace = true }
aptos-api = { workspace = true }
aptos-backup-service = { workspace = true }
libra2-build-info = { workspace = true }
aptos-cached-packages = { workspace = true }
libra2-channels = { workspace = true }
libra2-config = { workspace = true }
libra2-consensus = { workspace = true }
libra2-consensus-notifications = { workspace = true }
libra2-crash-handler = { workspace = true }
libra2-crypto = { workspace = true }
libra2-data-client = { workspace = true }
libra2-data-streaming-service = { workspace = true }
aptos-db = { workspace = true }
aptos-db-indexer = { workspace = true }
libra2-dkg-runtime = { workspace = true }
libra2-event-notifications = { workspace = true }
aptos-executor = { workspace = true }
aptos-framework = { workspace = true }
libra2-genesis = { workspace = true }
aptos-indexer = { workspace = true, optional = true }
aptos-indexer-grpc-fullnode = { workspace = true }
aptos-indexer-grpc-table-info = { workspace = true }
libra2-infallible = { workspace = true }
libra2-inspection-service = { workspace = true }
libra2-jwk-consensus = { workspace = true }
libra2-logger = { workspace = true, features = ["node-identity"] }
libra2-mempool = { workspace = true }
libra2-mempool-notifications = { workspace = true }
libra2-network = { workspace = true }
libra2-network-benchmark = { workspace = true }
libra2-network-builder = { workspace = true }
libra2-node-identity = { workspace = true }
libra2-peer-monitoring-service-client = { workspace = true }
libra2-peer-monitoring-service-server = { workspace = true }
libra2-peer-monitoring-service-types = { workspace = true }
libra2-runtimes = { workspace = true }
libra2-state-sync-driver = { workspace = true }
aptos-storage-interface = { workspace = true }
libra2-storage-service-client = { workspace = true }
libra2-storage-service-notifications = { workspace = true }
libra2-storage-service-server = { workspace = true }
libra2-storage-service-types = { workspace = true }
libra2-telemetry = { workspace = true }
libra2-temppath = { workspace = true }
libra2-time-service = { workspace = true }
# libra2-types = { workspace = true }
libra2-types = { workspace = true }
libra2-validator-transaction-pool = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-environment = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
either = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rlimit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }

[target.'cfg(target_os = "linux")'.dependencies]
rstack-self = { workspace = true }

[features]
assert-private-keys-not-cloneable = ["libra2-crypto/assert-private-keys-not-cloneable"]
check-vm-features = []
consensus-only-perf-test = ["aptos-executor/consensus-only-perf-test", "libra2-mempool/consensus-only-perf-test", "aptos-db/consensus-only-perf-test"]
default = []
failpoints = ["fail/failpoints", "libra2-consensus/failpoints", "aptos-executor/failpoints", "libra2-mempool/failpoints", "aptos-api/failpoints", "libra2-config/failpoints"]
indexer = ["aptos-indexer"]
tokio-console = ["libra2-logger/tokio-console", "libra2-config/tokio-console"]
smoke-test = ["libra2-jwk-consensus/smoke-test", "libra2-dkg-runtime/smoke-test"]

[package.metadata.cargo-machete]
ignored = ["libra2-crypto"]
