[package]
name = "libra2-mempool"
description = "Libra2 mempool for consuming incoming transactions"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-bounded-executor = { workspace = true }
libra2-channels = { workspace = true }
libra2-config = { workspace = true }
libra2-consensus-types = { workspace = true }
libra2-crypto = { workspace = true }
libra2-event-notifications = { workspace = true }
libra2-infallible = { workspace = true }
libra2-logger = { workspace = true }
libra2-mempool-notifications = { workspace = true }
libra2-metrics-core = { workspace = true }
libra2-netcore = { workspace = true }
libra2-network = { workspace = true }
libra2-peer-monitoring-service-types = { workspace = true }
libra2-runtimes = { workspace = true }
libra2-short-hex-str = { workspace = true }
aptos-storage-interface = { workspace = true }
libra2-time-service = { workspace = true }
libra2-transaction-filters = { workspace = true }
libra2-types = { workspace = true }
aptos-vm-validator = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
libra2-compression = { workspace = true }
libra2-config = { workspace = true }
libra2-id-generator = { workspace = true }
libra2-network = { workspace = true, features = ["fuzzing"] }
aptos-storage-interface = { workspace = true, features = ["fuzzing"] }
libra2-time-service = { workspace = true, features = ["testing"] }
libra2-transaction-filters = { workspace = true, features = ["fuzzing"] }
enum_dispatch = { workspace = true }
proptest = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints", "aptos-vm-validator/failpoints"]
fuzzing = ["proptest", "libra2-types/fuzzing", "aptos-storage-interface/fuzzing", "libra2-config/fuzzing"]
consensus-only-perf-test = []
