[package]
name = "aptos-vm-validator"
description = "Aptos vm validator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-logger = { workspace = true }
aptos-storage-interface = { workspace = true }
libra2-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-environment = { workspace = true }
aptos-vm-logging = { workspace = true }
fail = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
aptos-cached-packages = { workspace = true }
libra2-crypto = { workspace = true }
aptos-db = { workspace = true }
aptos-executor-test-helpers = { workspace = true }
aptos-gas-schedule = { workspace = true, features = ["testing"] } 
libra2-temppath = { workspace = true }
libra2-types = { workspace = true, features = ["testing"] }
aptos-vm-genesis = { workspace = true }
move-vm-types = { workspace = true, features = ["testing"] }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["libra2-types/fuzzing", "libra2-crypto/fuzzing", "aptos-db/fuzzing"]
