[package]
name = "libra2-vm-validator"
description = "Libra2 vm validator"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-logger = { workspace = true }
libra2-storage-interface = { workspace = true }
libra2-types = { workspace = true }
libra2-vm = { workspace = true }
libra2-vm-environment = { workspace = true }
libra2-vm-logging = { workspace = true }
fail = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
libra2-cached-packages = { workspace = true }
libra2-crypto = { workspace = true }
libra2-db = { workspace = true }
libra2-executor-test-helpers = { workspace = true }
libra2-gas-schedule = { workspace = true, features = ["testing"] } 
libra2-temppath = { workspace = true }
libra2-types = { workspace = true, features = ["testing"] }
libra2-vm-genesis = { workspace = true }
move-vm-types = { workspace = true, features = ["testing"] }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["libra2-types/fuzzing", "libra2-crypto/fuzzing", "libra2-db/fuzzing"]
