[package]
name = "libra2-openapi-spec-generator"
description = "Libra2 API OpenAPI Spec Generator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-api = { workspace = true }
libra2-config = { workspace = true }
libra2-mempool = { workspace = true, features = ["fuzzing"] }
libra2-storage-interface = { workspace = true }
libra2-types = { workspace = true }
clap = { workspace = true }
