[package]
name = "libra2-api-test-context"
description = "Libra2 API test context"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
libra2-api = { workspace = true }
libra2-api-types = { workspace = true }
libra2-cached-packages = { workspace = true }
libra2-config = { workspace = true }
libra2-crypto = { workspace = true }
libra2-db = { workspace = true, features = ["fuzzing"] }
libra2-executor = { workspace = true }
libra2-executor-types = { workspace = true }
libra2-framework = { workspace = true }
libra2-genesis = { workspace = true }
libra2-indexer-grpc-table-info = { workspace = true }
libra2-mempool = { workspace = true, features = ["fuzzing"] }
libra2-mempool-notifications = { workspace = true }
libra2-sdk = { workspace = true }
libra2-storage-interface = { workspace = true }
libra2-temppath = { workspace = true }
libra2-types = { workspace = true }
libra2-vm = { workspace = true }
libra2-vm-logging = { workspace = true }
libra2-vm-validator = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
goldenfile = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
warp-reverse-proxy = { workspace = true }
