[package]
name = "libra2-api-types"
description = "Libra2 API Types"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-config = { workspace = true }
libra2-crypto = { workspace = true }
libra2-logger = { workspace = true }
libra2-openapi = { workspace = true }
libra2-resource-viewer = { workspace = true }
libra2-storage-interface = { workspace = true }
libra2-types = { workspace = true }
libra2-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["async-trait", "poem", "poem-openapi-derive"]
