[package]
name = "aptos-transaction-benchmarks"
description = "Aptos transaction benchmarks"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
libra2-bitvec = { workspace = true }
aptos-block-executor = { workspace = true }
libra2-block-partitioner = { workspace = true }
libra2-crypto = { workspace = true }
aptos-language-e2e-tests = { workspace = true }
libra2-logger = { workspace = true }
libra2-metrics-core = { workspace = true }
libra2-node-resource-metrics = { workspace = true }
libra2-push-metrics =  { workspace = true }
aptos-transaction-simulation = { workspace = true }
libra2-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-logging = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
criterion-cpu-time = { workspace = true }
num_cpus = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "transaction_benches"
harness = false
