[package]
name = "aptos-vm-logging"
description = "Aptos VM speculative logging utility"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
libra2-crypto = { workspace = true }
libra2-logger = { workspace = true }
libra2-metrics-core = { workspace = true }
libra2-speculative-state-helper = { workspace = true }
libra2-types = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
