[package]
name = "aptos-move-e2e-benchmark"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-language-e2e-tests = { workspace = true }
libra2-logger = { workspace = true }
aptos-transaction-generator-lib = { workspace = true }
aptos-transaction-workloads-lib = { workspace = true }
libra2-types = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
