[package]
name = "language-e2e-testsuite"
description = "Move language e2e tests"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-cached-packages = { workspace = true }
libra2-crypto = { workspace = true }
aptos-gas-algebra = { workspace = true }
aptos-gas-schedule = { workspace = true, features = ["testing"] }
aptos-language-e2e-tests = { workspace = true }
libra2-logger = { workspace = true }
aptos-transaction-simulation = { workspace = true }
libra2-types = { workspace = true }
aptos-vm = { workspace = true, features = ['failpoints'] }
aptos-vm-genesis = { workspace = true }
claims = { workspace = true }
fail = { workspace = true, features = ['failpoints'] }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-ir-compiler = { workspace = true }
proptest = { workspace = true }

[features]
default = [
    "aptos-cached-packages/fuzzing",
    "move-core-types/fuzzing",
    "libra2-types/fuzzing",
]
