[package]
name = "libra2-move-debugger"
version = "0.1.1"
description = "A tool to replay transactions on chain and to execute transactions locally."

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-block-executor = { workspace = true }
libra2-consensus = { workspace = true }
libra2-crypto = { workspace = true }
aptos-gas-profiling = { workspace = true }
libra2-logger = { workspace = true }
libra2-rest-client = { workspace = true }
libra2-types = { workspace = true }
aptos-validator-interface = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-environment = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-vm-types = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[[bin]]
name = "remote-gas-profiler"
