[package]
name = "aptos-replay-benchmark"
version = "0.1.0"
description = "A tool to replay and locally benchmark on-chain transactions."

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-block-executor = { workspace = true }
aptos-framework = { workspace = true }
aptos-gas-schedule = { workspace = true }
libra2-logger = { workspace = true }
libra2-move-debugger = { workspace = true }
libra2-push-metrics = { workspace = true }
libra2-rest-client = { workspace = true }
libra2-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-environment = { workspace = true }
bcs = { workspace = true }
claims = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
move-core-types = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
libra2-crypto = { workspace = true }
libra2-types = { workspace = true, features = ["testing"] }
rand = { workspace = true }
