[package]
name = "libra2-global-constants"
description = "Libra2's global constant crate: the source of truth for constant definitions that span multiple crates"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = []
testing = []
