[package]
name = "libra2-consensus-types"
description = "Libra2 consensus types"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-bitvec = { workspace = true }
libra2-crypto = { workspace = true }
libra2-crypto-derive = { workspace = true }
libra2-executor-types = { workspace = true }
libra2-infallible = { workspace = true }
libra2-logger = { workspace = true }
libra2-short-hex-str = { workspace = true }
libra2-types = { workspace = true }
bcs = { workspace = true }
derivative = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
libra2-types = { workspace = true, features = ["fuzzing"] }
proptest = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["proptest", "libra2-types/fuzzing", "libra2-crypto/fuzzing"]
