[package]
name = "libra2-safety-rules"
description = "Libra2 safety rules"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
libra2-config = { workspace = true }
libra2-consensus-types = { workspace = true }
libra2-crypto = { workspace = true }
libra2-global-constants = { workspace = true }
libra2-infallible = { workspace = true }
libra2-logger = { workspace = true }
libra2-metrics-core = { workspace = true }
libra2-secure-net = { workspace = true }
libra2-secure-storage = { workspace = true }
libra2-types = { workspace = true }
libra2-vault-client = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
libra2-config = { workspace = true, features = ["fuzzing"] }
libra2-consensus-types = { workspace = true, features = ["fuzzing"] }
libra2-proptest-helpers = { workspace = true }
libra2-secure-storage = { workspace = true, features = ["testing"] }
claims = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "safety_rules"
harness = false
required-features = ["testing"]

[features]
default = []
fuzzing = ["libra2-consensus-types/fuzzing", "libra2-config/fuzzing", "proptest"]
testing = ["libra2-secure-storage/testing"]
