[package]
name = "aptos-admin-service"
description = "The Admin Service"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-config = { workspace = true }
libra2-consensus = { workspace = true }
libra2-crypto = { workspace = true }
libra2-infallible = { workspace = true }
libra2-logger = { workspace = true }
libra2-mempool = { workspace = true }
libra2-runtimes = { workspace = true }
aptos-storage-interface = { workspace = true }
libra2-system-utils = { workspace = true }
libra2-types = { workspace = true }
bcs = { workspace = true }
futures-channel = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
sha256 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
