[package]
name = "aptos-compression"
description = "A unified compression interface and implementation offered by Aptos"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
libra2-logger = { workspace = true }
libra2-metrics-core = { workspace = true }
lz4 = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
libra2-crypto = { workspace = true }
libra2-types = { workspace = true }
bcs = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
