[package]
name = "aptos-genesis"
description = "A tool to manage genesis"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-cached-packages = { workspace = true }
libra2-config = { workspace = true }
libra2-crypto = { workspace = true }
aptos-db = { workspace = true }
aptos-executor = { workspace = true }
aptos-framework = { workspace = true }
libra2-keygen = { workspace = true }
libra2-logger = { workspace = true }
aptos-storage-interface = { workspace = true }
libra2-temppath = { workspace = true }
libra2-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-genesis = { workspace = true }
bcs = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
libra2-config = { workspace = true }

[features]
testing = []
fuzzing = ["libra2-config/fuzzing"]
