[package]
name = "aptos-inspection-service"
description = "The Node Inspection Service"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-build-info = { workspace = true }
libra2-config = { workspace = true }
aptos-data-client = { workspace = true }
aptos-logger = { workspace = true }
libra2-metrics-core = { workspace = true }
aptos-network = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-storage-service-client = { workspace = true }
aptos-telemetry = { workspace = true }
libra2-time-service = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
libra2-time-service = { workspace = true, features = ["testing"] }
assert_approx_eq = { workspace = true }
rusty-fork = { workspace = true }
