[package]
name = "libra2-channels"
description = "An implementation of a channel with configurable QoS"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-infallible = { workspace = true }
libra2-metrics-core = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
libra2-types = { workspace = true }
tokio = { workspace = true }
