[package]
name = "libra2-crash-handler"
description = "Libra2 crash handler"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-logger = { workspace = true }
backtrace = { workspace = true }
move-core-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
