[package]
name = "libra2-fallible"
description = "Fallible utlities for infallible operations"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
thiserror = { workspace = true }


