[package]
name = "aptos-indexer"
description = "Aptos Indexer"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-api = { workspace = true }
libra2-api-types = { workspace = true }
libra2-bitvec = { workspace = true }
libra2-config = { workspace = true }
libra2-logger = { workspace = true }
libra2-mempool = { workspace = true }
libra2-metrics-core = { workspace = true }
libra2-runtimes = { workspace = true }
libra2-storage-interface = { workspace = true }
libra2-types = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = [
    "chrono",
    "postgres",
    "r2d2",
    "numeric",
    "serde_json",
] }
diesel_migrations = { workspace = true }
field_count = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
aptos-api-test-context = { workspace = true }
